discussion/kv_engine/124851/124851_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-37921: Re-evaluate privileges for DCP streams

If a user loses privileges after stream-request, the DCP
stream should end.

This commit re-evaluates privileges on background tasks
* when backfill receives items/places a snapshot-marker
* when the checkpoint processing task runs

Privileges are only re-checked when we see that the privilege
context revision has changed.

Change-Id: I926bbca41d64d3964a95c47375a7a1f2945c1245

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-02 20:58:29.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-02 21:16:15.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27282/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\dcp\active_stream.cc(268): error C2039: "unlock": is not a member of "std::lock_guard<std::mutex>" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27282/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23331/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/active_stream.cc:268:20:
error: no member named "unlock" in "std::lock_guard<std::mutex>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23331/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1512/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/active_stream.cc:268:20: error: no member named "unlock" in "std::lock_guard<std::mutex>" [clang-diagnostic-error]
                lh.unlock();
                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1512/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/active_stream.cc:268:20:
error: no member named "unlock" in "std::lock_guard<std::mutex>" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1512/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/29/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/29/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2911/ : FAILURE

Compile error at [2020-04-02T21:09:01.364Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:268:20:
error: ?using LockHolder = class std::lock_guard<std::mutex> {aka class std::lock_guard<std::mutex>}? has no member named ?unlock?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2911/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1961/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1961/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2966/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2915/ : FAILURE

Compile error at [2020-04-02T21:15:23.497Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:268:20:
error: ?using LockHolder = class std::lock_guard<std::mutex> {aka class std::lock_guard<std::mutex>}? has no member named ?unlock?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2915/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10769/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10769/ )
----------------------------------------------------------------------------------------------------------------------
